Added sorting by clicking on the column name (currently only ASC), added a function for pagination, fixed a bug where the pagination was still usable although the number of the students was smaller than the max. data rows per site (the pagination will be disabled in this state now).

--- a/home/format/format.css
+++ b/home/format/format.css
@@ -12,6 +12,10 @@ nav .navbar-toggler-icon {
   background-image: url("../pictures/hamburgerMenuIconWhite.png");
 }
 
+#tblStudents th {
+  cursor: pointer;
+}
+
 #databaseError {
   border: 0px solid black;
 }
